--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,59 @@ button {
 	left: 240px;
 }
 
+.about {
+	background-color: #a5978e;
+	padding: 50px 0;
+	color: #fafafa;
+}
+.about__inner {
+	display: flex;
+	align-items: center;
+}
+.about__content {
+	min-width: 370px;
+}
+.about__title {
+	margin-bottom: 15px;
+	font-size: 40px;
+}
+.about__text {
+	margin-bottom: 15px;
+}
+.about__list {
+	position: relative;
+	display: flex;
+	padding-left: 110px;
+	padding-bottom: 48px;
+	align-items: center;
+	gap: 0 20px;
+	flex-basis: 930px;
+}
+.about__list::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	background-image: url(../images/about-decor.png);
+	width: 22px;
+	height: 30px;
+}
+.about__list::after {
+	content: "";
+	position: absolute;
+	left: 22px;
+	bottom: 13px;
+	background-color: #7b6152;
+	width: 1000%;
+	height: 1px;
+}
+.about__item-img {
+	margin-bottom: 10px;
+}
+.about__item-text {
+	font-size: 11px;
+}
+
 .footer {
 	padding-top: 40px;
 	padding-bottom: 35px;
@@ -159,6 +212,12 @@ button {
 	}
 	.hero__text {
 		margin-bottom: 30pxs;
+	}
+	.about__content {
+		min-width: 300px;
+	}
+	.about__list {
+		padding-left: 20px;
 	}
 }
 
