--- a/css/style.css
+++ b/css/style.css
@@ -503,6 +503,9 @@ button {
 }
 
 @media (max-width: 480px) {
+	.container {
+		max-width: 460px;
+	}
 	.section {
 		padding-bottom: 50px;
 	}
@@ -561,17 +564,20 @@ button {
 	.about__inner {
 		align-items: flex-end;
 	}
+	.creating__item img {
+		width: 66px;
+	}
 }
 
 @media (max-width: 404px) {
+	.products__content {
+		gap: 40px 7px;
+	}
 	.creating__content {
-		gap: 20px 25px;
+		gap: 20px 5px;
 	}
 	.creating__item {
 		gap: 0 16px;
-	}
-	.creating__item img {
-		width: 66px;
 	}
 }
 
@@ -622,9 +628,6 @@ button {
 	.products__item {
 		width: 150px;
 	}
-	.products__content {
-		gap: 40px 7px;
-	}
 	.products__item-img {
 		width: 150px;
 	}
@@ -644,5 +647,11 @@ button {
 	}
 	.creating__text {
 		font-size: 6px;
+	}
+	.creating__text {
+		width: 72px;
+	}
+	.creating__item {
+		width: 150px;
 	}
 }
