--- a/css/style.css
+++ b/css/style.css
@@ -443,6 +443,9 @@ button {
 	.about__item-img--2 {
 		width: 190px;
 	}
+	.creating__content {
+		gap: 35px 25px;
+	}
 }
 
 @media (max-width: 640px) {
