--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,44 @@ button {
 	bottom: 50px;
 }
 
+.accordeon__item {
+	background-color: #fafafa;
+	margin-bottom: 10px;
+}
+.accordeon__text {
+	opacity: 0;
+	max-height: 0;
+	transition: opacity 0.3s, max-height 0.3s;
+}
+.accordeon__text-item {
+	padding: 20px 40px;
+}
+.accordeon__text.accordeon__text--visible {
+	opacity: 1;
+}
+.accordeon__title {
+	position: relative;
+	font-family: "Yeseva One", cursive;
+	font-size: 16px;
+	display: block;
+	background-color: transparent;
+	padding: 16px 50px 16px 13px;
+	width: 100%;
+	text-align: left;
+}
+.accordeon__title::after {
+	content: "";
+	background-image: url(../images/arrow-down.svg);
+	width: 16px;
+	height: 16px;
+	position: absolute;
+	right: 26px;
+	top: 17px;
+}
+.accordeon__title.accordeon__title--active::after {
+	transform: rotate(180deg);
+}
+
 .promo {
 	background-image: url(/images/promo.jpg);
 	background-repeat: no-repeat;
