--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ button {
 }
 
 .promo {
-	background-image: url(/images/promo.jpg);
+	background-image: url(../images/promo.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
