--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ body {
 a {
 	text-decoration: none;
 	color: inherit;
+	font-weight: 400;
+	transition: font-weight 0.3s ease;
+}
+a:hover {
+	font-weight: 800;
 }
 
 ul {
@@ -31,6 +36,11 @@ button {
 	padding: 0;
 	border-radius: 0;
 	cursor: pointer;
+	box-shadow: 0px 0px 0px 0px transparent;
+	transition: box-shadow 0.3s ease-in-out;
+}
+button:hover {
+	box-shadow: 0px 0px 10px 3px #e9bc78;
 }
 
 .container {
@@ -471,6 +481,11 @@ button {
 	padding: 14px 25px 12px;
 	min-width: 135px;
 	text-align: center;
+	box-shadow: 0px 0px 0px 0px transparent;
+	transition: box-shadow 0.3s ease-in-out;
+}
+.promo__link:hover {
+	box-shadow: 0px 0px 10px 3px #e9bc78;
 }
 
 .contacts {
